// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFacetsMap 1`] = `
{
  "mainLanguages:dan": {
    "key": "dan",
    "score": 427,
    "term": "Dansk",
    "traceId": "2",
  },
  "mainLanguages:eng": {
    "key": "eng",
    "score": 82,
    "term": "Engelsk",
    "traceId": "3",
  },
  "materialTypesGeneral:artikler": {
    "key": "artikler",
    "score": 346,
    "term": "artikler",
    "traceId": "4",
  },
  "materialTypesGeneral:bøger": {
    "key": "bøger",
    "score": 74,
    "term": "bøger",
    "traceId": "5",
  },
  "materialTypesGeneral:computerspil": {
    "key": "computerspil",
    "score": 26,
    "term": "computerspil",
    "traceId": "7",
  },
  "materialTypesGeneral:e-bøger": {
    "key": "e-bøger",
    "score": 38,
    "term": "e-bøger",
    "traceId": "6",
  },
  "materialTypesGeneral:film": {
    "key": "film",
    "score": 9,
    "term": "film",
    "traceId": "8",
  },
}
`;

exports[`createFilters > should create filters 1`] = `
{
  "accessTypes": [
    "Fysisk",
  ],
  "branchId": [
    "710100",
    "710200",
  ],
  "mainLanguages": [
    "Dansk",
    "Engelsk",
  ],
}
`;

exports[`formatFacetTerms > should format facet terms 1`] = `
{
  "accessTypes": [
    "Fysisk",
  ],
  "mainLanguages": [
    "Dansk",
    "Engelsk",
  ],
}
`;

exports[`getPlaceHolderFacets > should get placeholder facets 1`] = `
[
  {
    "name": "MATERIALTYPESGENERAL",
    "type": "MATERIALTYPESGENERAL",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "CREATORS",
    "type": "CREATORS",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "SUBJECTS",
    "type": "SUBJECTS",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "FICTIONNONFICTION",
    "type": "FICTIONNONFICTION",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "CHILDRENORADULTS",
    "type": "CHILDRENORADULTS",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "ACCESSTYPES",
    "type": "ACCESSTYPES",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "MAINLANGUAGES",
    "type": "MAINLANGUAGES",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "GENREANDFORM",
    "type": "GENREANDFORM",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "MATERIALTYPESSPECIFIC",
    "type": "MATERIALTYPESSPECIFIC",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "FICTIONALCHARACTERS",
    "type": "FICTIONALCHARACTERS",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "YEAR",
    "type": "YEAR",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "CANALWAYSBELOANED",
    "type": "CANALWAYSBELOANED",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "DK5",
    "type": "DK5",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
  {
    "name": "GAMEPLATFORM",
    "type": "GAMEPLATFORM",
    "values": [
      {
        "key": "",
        "term": "",
        "traceId": "",
      },
    ],
  },
]
`;
